# cal

./: .env  .gitignore  docker-compose.yml
android/calorie/: .eslintrc.js  App.tsx  app.json  babel.config.js  package.json
android/calorie/src/: types.ts
android/calorie/src/screens/: CreateMeal.tsx  IngredientSearchScreen.tsx
backend/: logger.py  main.py  models.py  pyproject.toml  run_server.py  schemas.py  settings.py
backend/core/: database.py  migrator.py  models.py  schemas.py  utils.py
backend/meals/: models.py  router.py
backend/meals/api/: ingredient.py  meal.py
backend/migrations/: 0001_calories_in_ingredient.py  __init__.py
backend/tests/: conftest.py  test_hello_world.py  test_ingredient.py
backend/tests/api/: test_auth.py  test_ingredient.py  test_meal.py
backend/tests/factories/: base.py  conftest.py  ingredient.py  meal.py  user.py
backend/users/: models.py
backend/users/api/: auth.py  router.py
docker/backend/: Dockerfile
web/calorie/: README.md  package.json
