[tool.poetry]
name = "calorie"
version = "0.1.0"
description = ""
authors = ["Adam Budziak <adambudziak@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
peewee = "^3.13.3"
uvicorn = "^0.11.8"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
