[tool.poetry]
name = "calorie"
version = "0.1.0"
description = ""
authors = ["Adam Budziak <adambudziak@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
peewee = "^3.13.3"
uvicorn = "^0.11.8"
psycopg2-binary = "^2.8.6"
more-itertools = "^8.5.0"
passlib = "^1.7.4"
python-jose = "^3.2.0"
bcrypt = "^3.2.0"
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
pytest = "^6.0.1"
pytest-factoryboy = "^2.0.3"
faker = "^4.1.2"
black = "^20.8b1"
isort = "^5.5.3"
pytest-clarity = "^0.3.0-alpha.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
